gatekeeper-policies/templates/final-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sprohibitedlabels
spec:
  crd:
    spec:
      names:
        kind: K8sProhibitedLabels
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sprohibitedlabels

        violation[{"msg": msg, "details": {"prohibited_labels": prohibitedLabels}}] {
            input.review.object.metadata.labels
            cat := input.review.object.metadata.labels["cat"]
            geo := input.review.object.metadata.labels["geo"]
            cat == "DB"
            geo == "US"
            msg := sprintf("Deployment with cat:DB and geo:US is not allowed: %v", [input.review.object.metadata.name])
        }
