gatekeeper-policies/templates/prohibited-labels-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sprohibitedlabels
spec:
  crd:
    spec:
      names:
        kind: K8sProhibitedLabels
      validation:
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sprohibitedlabels
        violation[{"msg": msg, "details": {"prohibited_labels": prohibited}}] {
          provided := {label | input.review.object.metadata.labels[label]}
          prohibited := {label | label = input.parameters.labels[_]; provided[label]}
          count(prohibited) > 0
          msg := sprintf("The following labels are prohibited: %v", [prohibited])
        }
